Add link  library

--- a/spotify-clone-front/src/app/app.component.html
+++ b/spotify-clone-front/src/app/app.component.html
@@ -3,6 +3,7 @@
     <div class="d-none d-sm-none d-md-block col-md-3 col-xl-2 navigation pe-2 h-100">
     <!--  navigation et library -->
       <app-navigation></app-navigation>
+      <app-library></app-library>
     </div>
     <div class="col-12 col-sm-12 col-md-9 col-xl-10 ps-0 h-100">
         <!-- header -->
